fix(BuildDotnet):use "/" instead of "\\"
Signed-off-by: doudou0720 <98651603+doudou0720@users.noreply.github.com>

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -71,7 +71,7 @@ jobs:
         uses: actions/upload-artifact@v4.5.0
         with:
           name: InkCanvasForClass.CE.debug
-          path: "Ink Canvas\bin\Debug\net472\*"
+          path: "Ink Canvas/bin/Debug/net472/*"
 
       - name: Create Summary
         if: always()
