fix:fall back to msbuild
Signed-off-by: doudou0720 <98651603+doudou0720@users.noreply.github.com>

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -26,7 +26,10 @@ jobs:
         uses: actions/checkout@v6
         with:
           fetch-depth: 1
-
+      
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v2
+      
       - name: Setup dotnet
         uses: actions/setup-dotnet@v5
         with:
@@ -34,11 +37,9 @@ jobs:
           cache: true
           cache-dependency-path: '**/packages.lock.json'
 
-      - name: Restore NuGet packages
-        run: dotnet restore "Ink Canvas.sln" --locked-mode
 
       - name: Build the Solution
-        run: dotnet build "Ink Canvas/InkCanvasForClass.csproj" -c Debug -p:Platform=AnyCPU -p:GitFlow="Github Action" -v minimal
+        run: msbuild /p:platform="AnyCPU" /p:configuration="Debug" /p:GitFlow="$GITFLOW" "Ink Canvas/InkCanvasForClass.csproj" /m /p:UseMultiToolTask=true /p:EnforceProcessCountAcrossBuilds=true /verbosity:minimal
 
       - name: Check if exe file is generated
         id: check-exe
