fix:Change to bash
Signed-off-by: doudou0720 <98651603+doudou0720@users.noreply.github.com>

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -78,6 +78,7 @@ jobs:
 
       - name: Create Summary
         if: always()
+        shell: bash
         run: |
           echo "# Build Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
