--- a/Ink Canvas/InkCanvasForClass.csproj
+++ b/Ink Canvas/InkCanvasForClass.csproj
@@ -298,6 +298,12 @@
     <Resource Include="Resources\Icons-Fluent\ic_fluent_delete_24_regular.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\privacy.txt">
+      <Link>privacy.txt</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <Resource Include="Resources\Icons-Fluent\ic_fluent_cursorWITHdelete_24_regular.png" />
   </ItemGroup>
   <ItemGroup>
