--- a/Ink Canvas/InkCanvasForClass.csproj
+++ b/Ink Canvas/InkCanvasForClass.csproj
@@ -299,7 +299,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="privacy.txt" />
-    <EmbeddedResource Include="telemetry_dsn.txt">
+    <EmbeddedResource Include="telemetry_dsn.txt" Condition="Exists('telemetry_dsn.txt')">
       <Link>telemetry_dsn.txt</Link>
     </EmbeddedResource>
   </ItemGroup>
